--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "ng2-sprint-planner",
   "version": "1.0.0",
+  "description": "Learning app for Angular2 - a sort of to do list for sprint planning",
+  "main": "app/boot",
   "scripts": {
     "tsc": "tsc",
     "tsc:w": "tsc -w",
@@ -9,11 +11,11 @@
   },
   "license": "ISC",
   "dependencies": {
-    "angular2": "2.0.0-beta.0",
+    "angular2": "2.0.0-beta.1",
     "systemjs": "0.19.6",
     "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.3",
-    "reflect-metadata": "0.1.2",
+    "es6-shim": "^0.34.2",
+    "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.0",
     "zone.js": "0.5.10"
   },
