--- a/package.json
+++ b/package.json
@@ -4,24 +4,27 @@
   "description": "Learning app for Angular2 - a sort of to do list for sprint planning",
   "main": "app/boot",
   "scripts": {
+    "postinstall": "npm run typings install",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "lite": "lite-server",
-    "start": "concurrent \"npm run tsc:w\" \"npm run lite\" "
+    "start": "concurrent \"npm run tsc:w\" \"npm run lite\" ",
+    "typings": "typings"
   },
   "license": "ISC",
   "dependencies": {
-    "angular2": "2.0.0-beta.1",
-    "systemjs": "0.19.6",
+    "angular2": "2.0.0-beta.6",
+    "systemjs": "0.19.20",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.34.2",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.0",
-    "zone.js": "0.5.10"
+    "zone.js": "0.5.14"
   },
   "devDependencies": {
     "concurrently": "^1.0.0",
-    "lite-server": "^1.3.1",
-    "typescript": "^1.7.3"
+    "lite-server": "^2.0.1",
+    "typescript": "^1.7.5",
+    "typings":"^0.6.8"
   }
 }
